# outline-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  config.example.yaml  docker-compose.example.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-and-publish-container-image.yml  build-and-publish-pypi.yml  release.yml
docker/: config.yaml.example
docs/: config.md  data-layout.md  doctor-workspace-sync-behavior.md  prompt-manifest.md  tools.md  workspace-memory-and-prompts.md
prompts/: 00_system.md
prompts/internal/: document_creation_policy.md  memory_update_policy.md  tool_planner_policy.md
prompts/packs/: outline_style.md
prompts/user/: 00_system.md
prompts/user/packs/: outline_style.md
scripts/: run-dev.sh
src/outline_agent/: __init__.py  app.py  bootstrap.py  cli.py
src/outline_agent/cli/: __init__.py  auth.py  doctor.py
src/outline_agent/clients/: __init__.py  gemini_web_search.py  model_client.py  openai_web_search.py  outline_attachments.py  outline_client.py  outline_comments.py  outline_documents.py  outline_exceptions.py  outline_http.py  outline_models.py  outline_utils.py  web_search.py  web_search_base.py
src/outline_agent/core/: config.py  logging.py  prompt_registry.py
src/outline_agent/doctor/: __init__.py  workspace_sync.py
src/outline_agent/managers/: __init__.py  action_router_manager.py  collection_memory_sync.py  document_creation_manager.py  document_memory_manager.py  document_update_manager.py  memory_action_manager.py  memory_manager.py  related_document_manager.py  same_document_comment_manager.py  thread_session_manager.py  tool_use_manager.py
src/outline_agent/models/: __init__.py  model_profiles.py  webhook_models.py
src/outline_agent/planning/: __init__.py  execution_loop.py  tool_plan_schema.py  tool_planner.py
src/outline_agent/processing/: __init__.py  action_plan_results.py  action_plan_structure.py  processor.py  processor_action_loop.py  processor_action_rounds.py  processor_action_session.py  processor_artifacts.py  processor_context.py  processor_detection.py  processor_flow.py  processor_identity.py  processor_outcomes.py  processor_progress.py  processor_prompting.py  processor_reply.py  processor_reply_persistence.py  processor_request.py  processor_runtime.py  processor_services.py  processor_side_effects.py  processor_tooling.py  processor_types.py  reply_stream_coordinator.py
src/outline_agent/runtime/: __init__.py  tool_runtime.py
src/outline_agent/state/: __init__.py  store.py  thread_state.py  thread_transcript.py  workspace.py
src/outline_agent/tools/: __init__.py  approval.py  base.py  defaults.py  document_actions.py  extract_text.py  gemini_web_search.py  outline_tools.py  registry.py  web_search.py  workspace_tools.py
src/outline_agent/utils/: __init__.py  rich_text.py  (+6 more)
tests/: test_attachment_context.py  test_bootstrap.py  test_cli.py  test_config.py  test_doctor_workspace_sync.py  test_gemini_web_search.py  test_mermaid_validation.py  test_model_client.py  test_model_profiles.py  test_outline_client.py  test_processor.py  test_prompt_assembly.py  test_rich_text.py  test_signature.py  test_thread_context_management.py  test_tool_runtime.py  test_unified_tools.py  test_web_search.py  test_workspace.py
tests/fixtures/: comments.create.json
(+11 files in other folders)
