[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outline-agent"
version = "0.2.0"
description = "Webhook-driven Outline thread agent"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["outline", "agent", "webhook", "fastapi", "automation", "knowledge-base", "comments"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: FastAPI",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP",
]
authors = [
  { name = "Gavin Gong", email = "gavin@gong.host" },
]
urls = { Homepage = "https://github.com/visualDust/outline-agent", Documentation = "https://github.com/visualDust/outline-agent#readme", Repository = "https://github.com/visualDust/outline-agent", Issues = "https://github.com/visualDust/outline-agent/issues" }
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.26",
  "loguru>=0.7",
  "markdown-it-py>=3.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7",
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
outline-agent = "outline_agent.cli:main"
outline-agent-comments = "outline_agent.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
outline_agent = [
  "assets/prompts/user/*.md",
  "assets/prompts/user/packs/*.md",
  "assets/prompts/internal/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
